--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "srr": true
+      }
+    ]
+  ],
   "presets": [
     "next/babel",
     "@babel/preset-typescript"
