--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   // "window.zoomLevel": 5,
   // "editor.fontSize": 18,
   // "terminal.integrated.fontSize": 16,
+  "window.zoomLevel": 2,
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
