--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "yarn test --watch",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -51,6 +52,7 @@
     "jest": "^27.2.0",
     "jest-styled-components": "^7.0.5",
     "lint-staged": "^11.1.2",
+    "plop": "^2.7.6",
     "prettier": "2.4.0",
     "typescript": "^4.4.3"
   }
