--- a/.babelrc
+++ b/.babelrc
@@ -4,22 +4,28 @@
     [
       "babel-plugin-styled-components",
       {
-        "ssr": true,
-        "displayName": true
+        "ssr": true
+        // "displayName": true
       }
-    ]
-  ],
-  "env": {
-    "test": {
-      "plugins": [
-        [
-          "babel-plugin-styled-components",
-          {
-            "ssr": false,
-            "displayName": false
-          }
-        ]
-      ]
-    }
-  }
+    ],
+    "babel-plugin-twin",
+    ["babel-plugin-macros", {
+      "twin": {
+        "preset": "styled-components"
+      }
+    }]
+  ]
+  // "env": {
+  //   "test": {
+  //     "plugins": [
+  //       [
+  //         "babel-plugin-styled-components",
+  //         {
+  //           "ssr": false,
+  //           "displayName": false
+  //         }
+  //       ]
+  //     ]
+  //   }
+  // }
 }
