--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
       "yarn test --findRelatedTests --bail"
     ]
   },
+  "resolutions": {
+    "@types/react": "^18.0.21"
+  },
   "dependencies": {
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "twin.macro": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -45,6 +49,7 @@
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
+    "babel-plugin-twin": "^1.0.2",
     "eslint": "^8.24.0",
     "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.5.0",
@@ -53,12 +58,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "jest": "^29.1.1",
+    "jest-environment-jsdom": "^29.1.2",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.0.3",
     "plop": "^3.1.1",
+    "postcss": "^8.4.17",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.7.1",
     "storybook-addon-next-router": "^4.0.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4"
   }
 }
