--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
       "yarn test --findRelatedTests --bail"
     ]
   },
+  "resolutions": {
+    "@types/react": "^18.0.21"
+  },
   "dependencies": {
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
@@ -37,7 +40,7 @@
     "@storybook/react": "^6.5.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.1.0",
+    "@types/jest": "^29.1.1",
     "@types/react": "^18.0.21",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
@@ -52,7 +55,7 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
-    "jest": "^29.1.1",
+    "jest": "^29.1.2",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.0.3",
     "plop": "^3.1.1",
