--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "scheduler": "^0.23.0",
     "styled-components": "^5.3.6",
-    "twin.macro": "^2.8.2"
+    "twin.macro": "^2.8.2",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
