--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "yarn test --watch",
+    "coverage": "jest --coverage",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
