--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/react": "^18.0.21"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
